[tool.poetry]
name = "kair"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.6.0"
scikit-image = "^0.19.3"
Pillow = "^9.2.0"
torchvision = "^0.13.1"
hdf5storage = "^0.1.18"
ninja = "^1.10.2"
lmdb = "^1.3.0"
requests = "^2.28.1"
timm = "^0.6.7"
einops = "^0.4.1"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
